caption title is fixed on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -149,10 +149,6 @@ button {
   background-color: orangered;
 }
 
-
-
-
-
 .dashboard-btn {
   max-width: 400px;
   width: 100%;
@@ -160,8 +156,36 @@ button {
   background-color: d2d4d6
 }
 
+.caption {
+    width: 500px;
+    height: 80px;
+     position: relative;
+     opacity:0;
+      transition: all 1000ms ease-out 600ms;
+}
+   /* opacity:0;
+   filter:alpha(opacity=0);
+   
+    animation-name: caption;
+    animation-duration: 5s;
+    animation-delay: 2s;
+    animation-timing-function: ease;
+     -webkit-animation-name: caption;
+    -webkit-animation-duration: 3s;
+    -webkit-animation-delay: 1s;
+    -webkit-animation-timing-function: ease;
+}
 
-
+@keyframes caption {
+  
+    from {opacity: 0.5; filter: alpha(opacity=50); }
+   to {opacity: 1; filter: alpha(opacity=100); }
+   
+}
+@-webkit-keyframes caption{
+    from {opacity: 0.5; filter: alpha(opacity=50); }
+   to {opacity: 1; filter: alpha(opacity=100); }
+} */
 /* login form style  */
 
 .formWrapper {
